Fixed preview overflow on iOS

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -235,6 +235,7 @@ button {
   border: 2px solid var(--bg);
   cursor: text;
   height: 20px;
+  line-height: 20px;
   overflow: hidden;
 }
 
